css/style.css
body{
    font-family: 'Roboto', sans-serif;
    font-size: 21px;
    /* margin: 20%; */
}


p{
  margin: 0;
}

#carouselExampleIndicators, #carouselExampleSlidesOnly{
  margin: 0 3%;
}

#carouselExampleIndicators{
  border-width: thick;
  border-color:  #FF7070;
  border-style: solid;
}

i{
  font-size: 16px;
}


.row{
  margin-left: 0;
  margin-right: 0;
  margin: 2% 0;

}

@media(max-width: 576px){
  .row{
    margin: 0 auto;
  }
  .mx-2{
    margin: 5px !important;
  }
}

.logo-img{
  margin: -50px;
}
/* Navbar */
.navbar{
  padding: 0 20px;
  /* margin: 0 10%; */

}


.navbar-brand img{
  width: 300px;
}


ul.navbar-nav a{
    font-size: 20px;
    color: black !important;
    font-weight: 300;

}

ul.navbar-nav a.nav-link{
    padding: 0 24px !important;
}

.dropdown-menu a:hover{
  color: #ff7070;
}

.dropdown-menu.show{
  background-color: #f8f9fa;

}

.nav-item .nav-link.active{
  color: #ff7070 !important;

}

li.nav-item.active{
  background-color: #ff7070 !important;
}

.navbar .nav-item a:hover{
  background-color: transparent;
  color: #ff7070 !important;

}


.nav-pills .nav-link.active, .nav-pills .show > .nav-link{
  background-color: transparent;
}


.navbar-light .navbar-nav .nav-link.disabled{
  color: rgb(179, 178, 178) !important;
}

/* Navbar */


/* Carousel */

a.btn:hover{
  background-color: #ff7070;
}

.btn.carousel-btn{
  font-size: 30px;
  font-weight: 900;

}

.carousel-caption{
  position: static !important;
}


.drk:after {
    content:"";
    display:block;
    position: absolute;;
    top:0;
    bottom:0;
    left:0;
    right:0;
    background:rgba(0, 0, 0, 0.1);
}

/* CAPTION */






/* CAPTION */

/* Carousel */

/* Rows */



/* Rows */


/* Columns */

.col-lg-6{
    padding: 0 30px;
}


p.and-more{
  font-size: 42px;
}

/* Fonts */
h3{
  font-size: 42px;
}


h3::first-letter {
    font-size: 70px !important;
    font-weight: bold;
    color: #ff7070;
  }

  h4{
    font-size: 35px;
  }
  
  h4::first-letter {
      font-size: 50px !important;
      font-weight: bold;
      color: #ff7070;
    }


/* Fonts */



/* Tech Mixer HTML */
.tech-mix-benefits{
  list-style-type: none;
  padding: 0px
}

ul.tech-mix-benefits li{
  padding: 10px;
}


/* Footer */



ul.contact li a .fab{
    color: #ff7070;
    margin: 40px;
    font-size: 40px;
}

.footer-nav h3{
    text-align: center;
    margin: 2%;
    margin-top: 0;
    padding-top: 2%;


}

p.copyrights{
    text-align: center;
    font-size: 12px;
}
/* Footer */



.shadow-img, .test-img{
    box-shadow: 0 20px 30px rgba(0,0,0,0.5);
}


.btn {
  font-size: 20px;
  color: black;
  padding: 5px 70px;
  background-color: transparent;
  border-color: #ff7070;


}







.drk-contact:after {
  content:"";
  display:block;
  position:absolute;
  top:0;
  bottom:0;
  left:0;
  right:0;
  background:rgba(0, 0, 0, 0.4);
}

.hello{
  font-size: 100px;
  font-weight: 900;
  font-family:  'ltc-squareface',sans-serif;
  margin: 50px auto;
}


.contact-containers{
  height: 200px;
  /* box-shadow: 0 20px 30px rgba(0,0,0,0.5); */
  font-size: 20px;

}

/* hello, contact sections */
.h{
  color: #ff7070;
}

/* INDEX PAGE */


p.meeting-time{
  font-size: 30px;
}

/* INDEX PAGE */

.fa-graduation-cap , .fa-users, .fa-handshake-o, .fa-gift, .fa-tshirt
{
  font-size: 40px;
  background: rgb(221, 221, 221);
  height: 100px;
  border-radius: 50%;
  line-height: 100px;
  padding: 30px;
}

.fa-hammer{
  font-size: 40px;;
}



.col-lg-2 {
  padding: 0 0;
}


ul.membership-benefits {
  list-style-type: circle;

}

ul.membership-benefits li{
  padding: 5px 0;
  word-wrap: break-word;
}

.card{
  margin: 0 20px;
  border-radius: 10px;
}

.eboard-img{
  width: 70%;
  margin: 0 auto;
}


.da-card{
  margin: 0 auto;
  text-align: center;
}

.da-team{
  border: 3px solid rgb(177, 177, 177);
  width: 60%;
  border-radius: 50%;
}

.card-title{
  color: #ff7070;
  font-size: 30px;
  font-weight: bolder;

}

.highlight, a{
  color: #ff7070;
  font-weight: 900;
}

.carousel-control-next,
.carousel-control-prev, .carousel-indicators {
    filter: invert(100%);

}


.join-today-steps {
  font-size: 40px;
  margin: 10px;
  font-weight: 900;
}

.fa-arrow-right:before{
  font-size: 30px;
  position: relative;
  top: 50%;
}

@media (max-width: 1243px) {
  .fa-arrow-right:before {
    display: none;
  }
}

.card-body{
  padding: 0px auto;
}

ul.list-group{
  font-size: 16px;
}

ul.list-group a{
  font-weight: 100;
  color: black;
}

ul.list-group a:hover{
  color: #ff7070 !important;


}

.itc-category-more-details{
  font-size: 14px;
}

.list-group-item-action{
  border-left: 0px;
  border-right: 0px;
}

.list-group-item-action:hover{
  color: white;
  background-color: #ff7070;
  text-decoration: none !important;


}

a:hover{
  text-decoration: none;
}



@media (max-width: 1341px) {
  .tab {
    margin: 10px;
  }
}



.test-img{
  width: 350px;
}

.img-2{
  position: absolute;
  right: 3rem;
  top: 25%;
  z-index: 1;
  margin: 0px;
}





h3,p{
  color: black;
}

.drk-2:after {
  content:"";
  display:block;
  position:absolute;
  top:0;
  bottom:0;
  left:0;
  right:0;
  background:rgba(0, 0, 0, 0.1);
}



.image-sm{
  height: 6rem;
}

.img{
  max-width: 100%;
}



@media(max-width: 1199.98px){
  ul.navbar-nav a{
    font-size: 20px;


}
}



 div.plat{
   font-size: 40px ;
   color: #7c7c7c;
   font-weight: 900;
 }

 div.gold {
   font-size: 40px ;
   color: #D4AF37	;
   font-weight: 900;
 }



 div.bronze {
  font-size: 40px ;
  color: #AD8A56	;
  font-weight: bolder;
 }

 /* Vertical Tabs */

 /* * {box-sizing: border-box}
 body {font-family: "Lato", sans-serif;} */

 /* Style the tab */
 .tab {
   float: left;
   border: 1px solid #ccc;
   background-color: #f1f1f1;
   width: 30%;
   height: 424px;
 }

 /* Style the buttons inside the tab */
 .tab button {
   display: block;
   background-color: inherit;
   color: black;
   padding: 22px 16px;
   width: 100%;
   border: none;
   outline: none;
   text-align: left;
   cursor: pointer;
   font-size: 17px;
 }

 /* Change background color of buttons on hover */
 .tab button:hover {
   background-color: #ddd;
 }

 /* Create an active/current "tab button" class */
 .tab button.active {
   background-color: #ccc;
 }

 /* Style the tab content */
 .tabcontent {
   float: left;
   padding: 0px 12px;
   border: 1px solid #ccc;
   width: 50%;
   border-left: none;
   height: 424px;
   display: none;
 }

 /* Clear floats after the tab */
 .clearfix::after {
   content: "";
   clear: both;
   display: table;
 }

 /* Div Cards */

/* Three columns side by side */
.column {
  float: left;
  width: 33.3%;
  margin-bottom: 16px;
  padding: 0 10px;
}

/* Display the columns below each other instead of side by side on small screens */
@media screen and (max-width: 650px) {
  .column {
    width: 100%;
    display: block;
  }
}
 
/* Add some shadows to create a card effect */
.tab {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  margin: 0px
}

/* Some left and right padding inside the container */
.container {
  padding: 15px 14px 18px 10px;
  text-align: center;
  border-radius: 10px;

}

/* Clear floats */
.container::after, .row::after {
  content: "";
  clear: both;
  display: table;
}

.title, .program {
  color: grey;
}

.button {
  font-size: 20px;
  background-color: #ff7070;
  border-color: #ff7070;
  border: none;
  border-radius: 10px;
  border: 1px solid rgb(151, 151, 151);
  outline: 0;
  color: #e0e0e0;
  cursor: pointer;
  padding: 5px 10px;
  margin: 5px 0px;
  text-align: center;  
  
}

.button:hover {
  background-color: rgb(255, 255, 255);
  color: #ff7070;
  font-weight: 900;
  outline: none;
}

/* Accordions */

details {
    border: 1px solid #aaa;
    border-radius: 4px;
    padding: .5em .5em 0;
}

summary {
    font-weight: bold;
    margin: -.5em -.5em 0;
    padding: .5em;
    color:#ff7070
}

details[open] {
    padding: .5em;
}

details[open] summary {
    border-bottom: 1px solid #aaa;
    margin-bottom: .5em;
}

/* Google Form styles*/
.freebirdFormviewerViewFooterFooterContainer {
    display: none !important
}

.freebirdFormviewerViewNavigationPasswordWarning{
   display: none !important
}

/* Responsive ITC Tabs at < 819px */
@media (max-width: 819px) {

  .tab {
    display: block !important;
    width: 100%;
    margin: 0px;
    height: max-content;
  }
  .tav .active {
    font-size: 1rem !important;
  }
  .tabcontent {
    width: 100%;
  }
  ul.list-group {
    font-size: 14px !important;
  }
  .card-title {
    font-size: 25px !important;
  }

  
}


/* =================================================== 
      # Mobile, iPads, Small screen Laptops:  200px to 767px                                 
=================================================== */
@media (min-width: 200px) and (max-width: 767.98px) {
  .shadow-img, .single-img, .sponsors {
    display: none !important;
  }

  .navbar-brand img {
    width: 100px;
  }

  .image-sm{
    height: 2rem !important;
  }

  h3{
    font-size: 40px;
  }


 }

/* =================================================== 
      # Mobile, iPads, Small screen Laptops:   200px to 767px                                 
=================================================== */

/* =================================================== 
      /* Mobile, iPads, Small screen Laptops:  320px - 1024px                              
=================================================== */


@media (min-width: 320px) and (max-width: 1024px) {
  .button{
    padding: 5px 50px;
    margin: 5px 0px;
    text-align: center;
    min-width: 100%;
  
  }
  .name{
    font-size: 2rem;
    max-width: 100%;
  }

  

}

/* =================================================== 
    /* Mobile, iPads, Small screen Laptops:  320px - 1024px                                
=================================================== */



/* Desktops, Extra Large Screens: 1025px and More */

@media (min-width: 1025px)  {
  .button {
    padding: 5px 40px;
    margin: 5px 0px;
    text-align: center;
  
  }

  .adjust-carousel {
    height: 580px !important; 
    width: 700px !important;
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
    background-color: gray;
  }

  
} 

/* Desktops, Extra Large Screens: 1025px and More */



@media (min-width: 576px) and (max-width: 636px){
  p.space{
    margin-bottom: 40px;
  }
}

ul.sponsors {
  width: 100%;
  text-align: center;
}

ul.sponsors li{
  display: inline;
  padding: 10px;
  max-width: fit-content;
}


/* Fall Professional Tech Mixer Google Sheet */

iframe {
  width: 70%;
  height: 500px;
  margin: 0 auto;
  display: block;
}

.date {
  margin: auto;
  padding: 0 10px 0 10px;
  text-align: center;
  color: gray;
  width: 50%;
  font-size: 18px;
  border-right: gray;
  border-right-style: double;
  font-weight: 900;
}

.date strong {
  font-size: 60px;
  color: #ff7070;
}



.events p.speakers {
  font-weight: 900;
  width: 100%;
}

.events .info-box {
  margin: 10px 0;
  padding: 10px 10px 10px 10px;
  text-align: left;
  font-size: 15px;
}

a.btn-event{
  font-size: 16px;
  padding: 5px 30px;
  margin: 20px 0px;
}

.btn-event:hover {
  color: #ffffff
}



.image-sm {
  border-radius: 10px;
  box-shadow: 0 2px 10px #bcbcc8;
  padding: 10px;
}

